# autosave

./: Cargo.toml  LICENSE  README.md  build.rs  deny.toml  install.sh
.github/workflows/: check.yaml  release.yaml
src/: cd.rs  client.rs  config.rs  daemon.rs  git.rs  lib.rs  main.rs  redirect.rs  types.rs  watcher.rs
src/daemon/: api.rs
src/daemon/api/: kill.rs  watch.rs
src/types/: implement.rs
