[package]
name = "autosave"
version = "0.0.1"
edition = "2021"
authors = ["cordx56 <cordx56@cordx.cx>"]
description = "Auto save changed file to local Git repo as commit"
readme = "README.md"
repository = "https://github.com/cordx56/autosave"
license = "GPL-3.0-or-later"
keywords = ["git", "backup"]

[dependencies]
clap = { version = "4", features = ["derive"] }
git2 = "0.18"
notify = { version = "6", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
