[package]
name = "autosave"
version = "0.1.0"
edition = "2024"
authors = ["cordx56 <cordx56@cordx.cx>"]
description = "Watch file changes and automatically save changed file to the local Git repository as a commit"
readme = "README.md"
repository = "https://github.com/cordx56/autosave"
license = "MPL-2.0"
keywords = ["git", "backup"]
categories = ["command-line-utilities"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
clap = { version = "4", features = ["derive"] }
git2 = "0.20"
notify = { version = "8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
daemonize = "0.5"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "io-util", "net", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json"] }
nix = { version = "0.30", features = ["signal", "process", "term"] }
libloading = "0.9"
